Cabal/tests/ParserTests/errors/big-version.cabal
cabal-version:       3.0
name:                big-version
-- 10 digits
version:             1234567890

library
  default-language: Haskell2010
